WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182986
[Curl] Fix warning on clang.
https://bugs.webkit.org/show_bug.cgi?id=182986
Summary
[Curl] Fix warning on clang.
Basuke Suzuki
Reported
2018-02-20 15:01:29 PST
Clang is more strict than MSC (which is good). Fixing unused variable and override related warnings.
Attachments
Fix
(2.78 KB, patch)
2018-02-20 15:17 PST
,
Basuke Suzuki
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(11.49 MB, application/zip)
2018-02-20 17:16 PST
,
EWS Watchlist
no flags
Details
fix
(3.76 KB, patch)
2018-02-21 11:23 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-02-20 15:17:38 PST
Created
attachment 334305
[details]
Fix
Konstantin Tokarev
Comment 2
2018-02-20 17:06:44 PST
Comment on
attachment 334305
[details]
Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=334305&action=review
> Source/WebCore/platform/network/curl/CurlResourceHandleDelegate.h:-52 > - void deref();
If there is no class inheriting from CurlResourceHandleDelegate, add "final" specifier to class declaration and methods
EWS Watchlist
Comment 3
2018-02-20 17:16:11 PST
Comment on
attachment 334305
[details]
Fix
Attachment 334305
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/6596590
New failing tests: http/wpt/resource-timing/rt-initiatorType-media.html
EWS Watchlist
Comment 4
2018-02-20 17:16:21 PST
Created
attachment 334322
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Basuke Suzuki
Comment 5
2018-02-21 11:23:39 PST
Created
attachment 334396
[details]
fix Fix to use final instead of override and add final onto the class definition.
Basuke Suzuki
Comment 6
2018-02-21 11:23:58 PST
(In reply to Konstantin Tokarev from
comment #2
)
> Comment on
attachment 334305
[details]
> Fix > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=334305&action=review
> > > Source/WebCore/platform/network/curl/CurlResourceHandleDelegate.h:-52 > > - void deref(); > > If there is no class inheriting from CurlResourceHandleDelegate, add "final" > specifier to class declaration and methods
Okay, got it.
WebKit Commit Bot
Comment 7
2018-02-22 11:41:23 PST
Comment on
attachment 334396
[details]
fix Clearing flags on attachment: 334396 Committed
r228927
: <
https://trac.webkit.org/changeset/228927
>
WebKit Commit Bot
Comment 8
2018-02-22 11:41:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-02-22 11:43:17 PST
<
rdar://problem/37795772
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug