[Curl] Fix warning on clang. https://bugs.webkit.org/show_bug.cgi?id=182986

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2018-02-22
Reviewed by Konstantin Tokarev.

No new tests because there's no behaviro changes.

* platform/network/curl/CurlResourceHandleDelegate.cpp:
(WebCore::CurlResourceHandleDelegate::curlDidSendData):
(WebCore::CurlResourceHandleDelegate::curlDidReceiveBuffer):
(WebCore::CurlResourceHandleDelegate::curlDidFailWithError):
* platform/network/curl/CurlResourceHandleDelegate.h:

Canonical link: https://commits.webkit.org/198796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228927 268f45cc-cd09-0410-ab3c-d52691b4dbfc